<resources>
    <string name="app_name">Jewellux</string>
    <string name="btn_login">GİRİŞ YAP</string>
    <string name="login">Giriş Yap</string>
    <string name="password">Parola</string>
    <string name="name_hint">Ad Soyad</string>
    <string name="e_mail_hint">E-Posta Adresi</string>
    <string name="phone_hint">Cep Telefonu</string>
    <string name="signup">Kayıt ol</string>
    <string name="dont_have_an_account">Hesabınız yok mu?</string>
    <string name="have_an_account">Hesabınız var mı?</string>
    <string name="add_to_basket">Sepete Ekle</string>
    <string name="products">Ürünler</string>
    <string name="promotions">Kampanyalar</string>
    <string name="profile">Profil</string>
    <string name="basket">Sepet</string>
    <string name="total_price">Toplam Tutar:</string>
</resources>